2006-04-11 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/widgets/TerrainEditor.lua, src/components/ogre/TerrainEditor.cpp, src/components/ogre/TerrainEditor.h: added undo and redo feature
    * src/components/ogre/scripting/bindings/lua/EntityWorldPickListener.pkg, src/components/ogre/scripting/bindings/lua/ListHolder.pkg, src/components/ogre/scripting/bindings/lua/TerrainEditor.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp: updated bindings

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/TerrainEditor.cpp, src/components/ogre/TerrainEditor.h: 
    	* mark moved base points
    	* use the updateTerrain method of the TerrainGenerator
    * src/components/ogre/TerrainGenerator.cpp, src/components/ogre/TerrainGenerator.h: refactored how the terrain is generated a bit, to better allow for updating the terrain
    * src/components/ogre/TerrainPage.cpp: force simple terrain material since the complex one doesn't really work yet
    * src/components/ogre/WorldEmberEntity.cpp, src/components/ogre/WorldEmberEntity.h: 
         * look for the "terrain" attribute being changed
         * refactored how the terrain is generated to better allow for updated terrain

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/ogreopcode/opcode/Makefile.am: fixed bad commit

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/scripting/bindings/lua/EmberOgre.pkg, src/components/ogre/scripting/bindings/lua/MathConverter.pkg, src/components/ogre/scripting/bindings/lua/lua_EmberOgre.cpp, src/components/ogre/scripting/bindings/lua/required.h, src/components/ogre/scripting/bindings/lua/helpers/LuaConnector.cpp, src/components/ogre/scripting/bindings/lua/helpers/LuaConnector.h, src/components/ogre/scripting/bindings/lua/helpers/LuaConnector.pkg, src/components/ogre/scripting/bindings/lua/helpers/lua_Helpers.cpp: updated bindings

2006-04-09 Erik Hjortsberg  <erik@katastrof.nu>
