@@ -1,62 +1,0 @@
-/*
-    Copyright (C) 2004  Erik Hjortsberg
-
-    This program is free software; you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 2 of the License, or
-    (at your option) any later version.
-
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
-
-    You should have received a copy of the GNU General Public License
-    along with this program; if not, write to the Free Software
-    Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-*/
-
-
-
-#ifndef DIMEEVENTPROCESSOR_H
-#define DIMEEVENTPROCESSOR_H
-
-#include "EmberOgrePrerequisites.h"
-
-/*
- *  @author Erik Hjortsberg
- * 
- * 
- */
-namespace EmberOgre {
-
-class EmberEventProcessor {
-public:
-
-	EmberEventProcessor();
-// 	void initialise(Ogre::RenderWindow* ren);
-// 
-// 	/*
-// 	 * call this method when you want to toggle the grabbing or release of the mouse
-// 	 */
-// 	void toggleMouse();
-// 	
-// 
-// 	/*
-// 	 * Returns true if the application has grabbed the mouse.
-// 	 */
-// 	bool isMouseUsed();
-/*	
-
-	
-protected:
-
-private:
-	bool mUseMouse;
-	Ogre::RenderWindow* mWin;
-//	virtual ~EmberEventProcessor();*/
-};
-
-}
-
-#endif // DIMEEVENTPROCESSOR_H
