@@ -75,7 +75,7 @@ ember_bin_LDADD = $(top_builddir)/src/components/ogre/scripting/libScripting.a $
 ember_bin_SOURCES = Avatar.cpp ConsoleObjectImpl.cpp AvatarController.cpp \
 				environment/Water.cpp TerrainGenerator.cpp MotionManager.cpp AvatarCamera.cpp \
 				TerrainShader.cpp GUIManager.cpp MousePicker.cpp EmberEntityFactory.cpp \
-				EmberEventProcessor.cpp EmberOgre.cpp EmberPhysicalEntity.cpp EmberEntity.cpp \
+				EmberOgre.cpp EmberPhysicalEntity.cpp EmberEntity.cpp \
 				AvatarEmberEntity.cpp WorldEmberEntity.cpp TerrainPage.cpp TerrainArea.cpp \
 				EmberEntityUserObject.cpp GUICEGUIAdapter.cpp CameraMount.cpp OgreLogObserver.cpp \
 			OgreResourceLoader.cpp TerrainEditor.cpp EntityWorldPickListener.cpp
@@ -87,7 +87,7 @@ confdir = $(sysconfdir)/ember/
 dist_conf_DATA = ogre.cfg plugins.cfg  resources.cfg terrain.cfg
 
 
-noinst_HEADERS = EmberEventProcessor.h EmberOgre.h WorldEmberEntity.h \
+noinst_HEADERS = EmberOgre.h WorldEmberEntity.h \
 				TerrainPage.h TerrainArea.h AvatarEmberEntity.h EmberPhysicalEntity.h \
 				EmberOgrePrerequisites.h EmberEntityFactory.h EmberEntity.h Avatar.h environment/Water.h \
 				TerrainGenerator.h MotionManager.h AvatarCamera.h TerrainShader.h MathConverter.h \
